Update footer text in tuesday.html

--- a/tuesday.html
+++ b/tuesday.html
@@ -428,7 +428,7 @@ summary(df_final)</code></pre>
   </main>
 
   <footer>
-    <p>Week 1 • Tuesday • Cleaning = strategy + justification</p>
+    <p>Week 1 • Tuesday • What is clean data?</p>
   </footer>
 </body>
 </html>
