Fix tab button label for active tab

--- a/briefs.html
+++ b/briefs.html
@@ -99,7 +99,7 @@
   <div class="tabs-wrap">
     <div class="tabs">
       <div class="indicator"></div>
-      <button class="tab active" data-target="Monkey">A</button>
+      <button class="tab active" data-target="A">Monkey</button>
       <button class="tab" data-target="B">B</button>
       <button class="tab" data-target="C">C</button>
       <button class="tab" data-target="D">D</button>
