Update tab labels and add new panels in briefs.html

--- a/briefs.html
+++ b/briefs.html
@@ -99,11 +99,14 @@
   <div class="tabs-wrap">
     <div class="tabs">
       <div class="indicator"></div>
-      <button class="tab active" data-target="A">Monkey</button>
-      <button class="tab" data-target="B">B</button>
-      <button class="tab" data-target="C">C</button>
-      <button class="tab" data-target="D">D</button>
-      <button class="tab" data-target="E">E</button>
+      <button class="tab active" data-target="A">Public Health</button>
+      <button class="tab" data-target="B">Product & Growth</button>
+      <button class="tab" data-target="C">Operations & Planning</button>
+      <button class="tab" data-target="D">Housing & Cost of Living</button>
+      <button class="tab" data-target="E">Graduate Outcomes Analytics</button>
+      <button class="tab" data-target="F">Retail Analytics - Store Performances</button>
+      <button class="tab" data-target="G">Sports Performance Monitoring</button>
+      <button class="tab" data-target="H">Public Transport Reliability</button>
     </div>
   </div>
 
@@ -114,6 +117,9 @@
     <div class="panel" id="C">text goes here</div>
     <div class="panel" id="D">text goes here</div>
     <div class="panel" id="E">text goes here</div>
+    <div class="panel" id="F">text goes here</div>
+    <div class="panel" id="G">text goes here</div>
+    <div class="panel" id="H">text goes here</div>
   </div>
   
 <script>
