Enhance briefs.html with more data and insights
Added additional data points and dashboard ideas to briefs.html.

--- a/briefs.html
+++ b/briefs.html
@@ -125,6 +125,7 @@
       </p>
       <ul>
         <li><b>All data is catagorised by region, offering high granularity from 2001 to 2024.</b></li>
+        <li><b>Data is also tagged by socioeconomic status, gender, religion, ethnic group, deprivation, free school meals status</b></li>
         <li>16-17 year olds not in education, training or employment</li>
         <li>Children (u16s) in Low Income families</li>
         <li>Life expectancy</li>
@@ -143,9 +144,12 @@
       </p>
 
       <ul>
-        <li>A</li>
-        <li>B</li>
-        <li>C</li>
+        <li>Life expectancy by region to identify clusters and patterns</li>
+            <ul><li>Do childhood indicators align with adult outcomes</li></ul>
+        <li>Identify whether early-life disadvantage aligns with later health-outcomes</li>
+        <li>Track modifiable behaviours linked to mortality region-by-region</li>
+          <ul><li>See if smoking prevalence is tied to cardiovascular mortality or cancer mortality</li>
+          <li>See if obesity trends with cardiovascular mortality</li></ul>
       </ul>
 
 
