Enhance relevance of Walmart sales dataset
Added a paragraph emphasizing the relevance of the dataset.

--- a/briefs.html
+++ b/briefs.html
@@ -257,6 +257,9 @@
     <div class="panel" id="F">
       <p>Kaggle offers a dataset of 45 Walmart stores sales from 2010-2012.</p>
       <p>The data details sales on a weekly basis by department and has tags for holidays, Temperature, Fuel prices, unemployment rates and consumer price index.</p>
+
+
+      <p><b>To make this feel a little bit more relevant we could just re-skin this data to a UK store.</b></p>
       
       <p>
         <strong>Data source:</strong>
