--- a/07_task.html
+++ b/07_task.html
@@ -122,6 +122,12 @@
       gap:20px;
       flex-wrap:wrap;
     }
+    .signature-img{
+      display:block;
+      max-width:55px;
+      height:auto;
+      margin:4px 0 6px;
+    }
     .sigline{
       margin-top:8px;
       border-top:1px solid var(--border);
