--- a/07_task.html
+++ b/07_task.html
@@ -211,7 +211,7 @@
       <p>
         As a newly promoted side for the 2024/25 season, our immediate objective is clear: <strong>retain Premier League status</strong>.
         At the same time, our recruitment strategy must protect the club financially by prioritising players who can
-        <strong>hold or increase their value</strong> over the next 1–3 seasons.
+        <strong>hold or increase their value</strong> over the next 1-3 seasons.
       </p>
 
       <h2>your role</h2>
@@ -260,7 +260,7 @@
           and surfaces candidate shortlists with rationale.
         </li>
         <li>
-          <strong>Technical note (1–2 pages)</strong> describing data sources, transformations, normalisation choices,
+          <strong>Technical note (1-2 pages)</strong> describing data sources, transformations, normalisation choices,
           limitations, and how the dashboard should be used responsibly.
         </li>
         <li>
