--- a/07_task.html
+++ b/07_task.html
@@ -215,7 +215,7 @@
         <div class="contact">
           <div><strong>King Power Stadium</strong></div>
           <div>Filbert Way, Leicester, LE2 7FL</div>
-          <div>recruitment.analytics@lcfc.example</div>
+          <div>recruitment.analytics@lcfc.uk</div>
           <div>+44 (0)116 000 0000</div>
         </div>
       </div>
