--- a/07_task.html
+++ b/07_task.html
@@ -321,7 +321,7 @@
         </div>
         <div style="text-align:right; color:var(--muted); font-size:12.5px; max-width: 320px;">
           <div><strong>Attachment:</strong> Data Dictionary &amp; Dashboard Requirements</div>
-          <div><strong>Confidentiality:</strong> Internal use (training simulation)</div>
+          <div><strong>Confidentiality:</strong> Internal use</div>
         </div>
       </div>
     </main>
@@ -331,7 +331,7 @@
         <strong>Teaching Simulation Notice:</strong> This document is a fictional project brief created for educational purposes
         and is not an official communication from Leicester City Football Club.
       </div>
-      <div>© <span id="year"></span> Training Materials</div>
+      <div>© <span id="year"></span> EL</div>
     </footer>
   </div>
 
