--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <li><a href="tuesday.html">Tuesday</a></li>
     <li><a href="briefs.html">Briefs</a></li>
     <li><a href="07_task.html">Leicester City Letter of Engagement</a></li>
+    <li><a href="01_task.html">Office for Health Improvements and Disparities </a></li>
   </ul>
 </body>
 </html>
