--- a/01_task.html
+++ b/01_task.html
@@ -178,7 +178,7 @@
     }
     .disclaimer{max-width: 650px}
 
-    /* A4 print setup */
+    /* A4 print set-up */
     @page{
       size: A4;
       margin: 15mm;
