--- a/01_task.html
+++ b/01_task.html
@@ -215,7 +215,7 @@
     <header class="masthead">
       <div class="brand">
         <img
-          src="assets/govuk-logo.png"
+          src="assets/govuk-logo2.png"
           alt="GOV.UK"
           class="govuk-logo"
         />
