--- a/index.html
+++ b/index.html
@@ -2,15 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Course Materials</title>
+  <style>
+    body{
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      margin:40px;
+      line-height:1.5;
+    }
+    h1{
+      font-size:24px;
+      margin-bottom:16px;
+    }
+    ul{
+      list-style:none;
+      padding:0;
+    }
+    li{
+      margin:10px 0;
+    }
+    a{
+      text-decoration:none;
+      color:#1d70b8;
+      font-weight:600;
+    }
+    a:hover{
+      text-decoration:underline;
+    }
+  </style>
 </head>
 
 <body>
+  <h1>Course Materials</h1>
+
   <ul>
     <li><a href="monday.html">Monday</a></li>
     <li><a href="tuesday.html">Tuesday</a></li>
-    <li><a href="briefs.html">Briefs</a></li>
-    <li><a href="01_task.html">Office for Health Improvements and Disparities </a></li>
+    <li><a href="briefs.html">Project Briefs</a></li>
+    <li><a href="01_task.html">Office for Health Improvement and Disparities</a></li>
     <li><a href="07_task.html">Leicester City Letter of Engagement</a></li>
   </ul>
 </body>
