--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
     <li><a href="monday.html">Monday</a></li>
     <li><a href="tuesday.html">Tuesday</a></li>
     <li><a href="briefs.html">Project Briefs</a></li>
-    <li><a href="01_task.html">Office for Health Improvement and Disparities</a></li>
-    <li><a href="07_task.html">Leicester City Letter of Engagement</a></li>
+    <p>Client "Emails" to Kickstart Projects:</p>
+    <li><a href="01_task.html">01: Office for Health Improvement and Disparities</a></li>
+    <li><a href="07_task.html">02: Leicester City Letter of Engagement</a></li>
   </ul>
 </body>
 </html>
