--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <li><a href="04_task.html">04: Housing</a></li>
     <li><a href="06_task.html">06: ASDA Letter of Engagement</a></li>
     <li><a href="07_task.html">07: Leicester City Letter of Engagement</a></li>
+    <h1>Concerns:</h1>
+    <li><a href="concerns.html">Concerns</a></li>
   </ul>
 </body>
 </html>
