--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <ul>
     <li><a href="monday.html">Monday</a></li>
     <li><a href="tuesday.html">Tuesday</a></li>
+    <h1>Page with Potential Project Briefs/Ideas:</h1>
     <li><a href="briefs.html">Project Briefs</a></li>
     <h1>Client "Emails" to Kickstart Projects:</h1>
     <li><a href="01_task.html">01: Office for Health Improvement and Disparities</a></li>
