Add section for Web Test for Jewel

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     <li><a href="07_task.html">07: Leicester City Letter of Engagement</a></li>
     <h1>Concerns:</h1>
     <li><a href="concerns.html">Concerns</a></li>
+    <h1>Web Test for Jewel</h1>
+    <li><a href="Jewel.html">Jewel</a></li>
   </ul>
 </body>
 </html>
