Create landing page for Proposal Studio
This HTML file serves as a landing page for Proposal Studio, providing information on PhD proposal support for scientists, including sections on the services offered and how they work.

--- a/jewel2.html
+++ b/jewel2.html
@@ -1,1 +1,195 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Proposal Studio — PhD Proposal Support for Scientists</title>
+  <meta name="description" content="We help applicants in the biological sciences turn early research ideas and draft PhD proposals into competitive, fundable submissions." />
+</head>
 
+<body>
+
+  <!-- Header -->
+  <header>
+    <nav aria-label="Primary navigation">
+      <div>
+        <a href="#" aria-label="Proposal Studio home">
+          <strong>Proposal Studio</strong>
+        </a>
+      </div>
+
+      <div>
+        <a href="#contact">Start building your proposal</a>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Hero -->
+  <main>
+
+    <section aria-labelledby="hero-heading">
+      <h1 id="hero-heading">
+        Have an idea for a PhD, but no clear proposal?
+      </h1>
+
+      <p>
+        We help applicants in the biological sciences turn early research ideas
+        and draft proposals into submissions that stand a real chance of funding
+        or interview.
+      </p>
+
+      <a href="#contact">
+        Start building your proposal
+      </a>
+    </section>
+
+    <!-- Problem framing -->
+    <section aria-labelledby="problems-heading">
+      <h2 id="problems-heading">
+        Why strong candidates still struggle with PhD proposals
+      </h2>
+
+      <ul>
+        <li>Expectations are rarely made explicit</li>
+        <li>Good ideas lack structure and focus</li>
+        <li>Proposals don’t align with funding or supervisors</li>
+        <li>Feedback is vague, inconsistent, or contradictory</li>
+      </ul>
+
+      <p>
+        These challenges affect applicants from all backgrounds — not because
+        they lack ability, but because proposal writing is an acquired skill.
+      </p>
+    </section>
+
+    <!-- What we do -->
+    <section aria-labelledby="what-we-do-heading">
+      <h2 id="what-we-do-heading">
+        What we do
+      </h2>
+
+      <p>
+        We provide structured, academically grounded support to help you clarify
+        your research question, frame it appropriately, and present it in a way
+        that supervisors and funders recognise as viable.
+      </p>
+    </section>
+
+    <!-- How it works -->
+    <section aria-labelledby="how-it-works-heading">
+      <h2 id="how-it-works-heading">
+        How it works
+      </h2>
+
+      <ol>
+        <li>
+          <h3>Clarify your idea</h3>
+          <p>We identify the core research question and scope.</p>
+        </li>
+
+        <li>
+          <h3>Align with expectations</h3>
+          <p>We shape the proposal around funding calls and supervisory fit.</p>
+        </li>
+
+        <li>
+          <h3>Build a coherent structure</h3>
+          <p>Methods, rationale, and feasibility are made explicit.</p>
+        </li>
+
+        <li>
+          <h3>Refine and strengthen</h3>
+          <p>The proposal is reviewed with interview and funding criteria in mind.</p>
+        </li>
+      </ol>
+    </section>
+
+    <!-- Services -->
+    <section aria-labelledby="services-heading">
+      <h2 id="services-heading">
+        Ways we can support you
+      </h2>
+
+      <article>
+        <h3>Discuss your project</h3>
+        <p>
+          A focused conversation to assess your idea, draft, or next steps.
+        </p>
+      </article>
+
+      <article>
+        <h3>Templates and guidance</h3>
+        <p>
+          Structured resources designed specifically for PhD proposals in science.
+        </p>
+      </article>
+
+      <article>
+        <h3>1–1 proposal development</h3>
+        <p>
+          Ongoing support to develop a competitive proposal from the ground up.
+        </p>
+      </article>
+    </section>
+
+    <!-- Credibility -->
+    <section aria-labelledby="credibility-heading">
+      <h2 id="credibility-heading">
+        Academic grounding
+      </h2>
+
+      <p>
+        Our support is informed by strong academic training, experience reviewing
+        PhD proposals, and a track record of helping applicants secure interviews
+        across competitive doctoral programmes.
+      </p>
+
+      <p>
+        We focus on scientific clarity, feasibility, and alignment — not generic
+        writing advice.
+      </p>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" aria-labelledby="contact-heading">
+      <h2 id="contact-heading">
+        Get started
+      </h2>
+
+      <p>
+        If you have a draft or an idea, tell us briefly where you’re stuck.
+      </p>
+
+      <form>
+        <label>
+          Name
+          <input type="text" name="name" required />
+        </label>
+
+        <label>
+          Email or WhatsApp
+          <input type="text" name="contact" required />
+        </label>
+
+        <label>
+          Brief description of your question or issue
+          <textarea name="message" rows="4"></textarea>
+        </label>
+
+        <button type="submit">
+          Contact us
+        </button>
+      </form>
+    </section>
+
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>
+      © Proposal Studio — PhD proposal support for the biological sciences
+    </p>
+  </footer>
+
+</body>
+</html>
