Change redirect URL from jewel2.html to Jewel.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
       if (value === CORRECT_PASSWORD) {
         // Correct: go to the protected page
-        window.location.href = "jewel2.html";
+        window.location.href = "Jewel.html";
       } else {
         // Incorrect: trigger shake + red effect
         passwordBox.classList.remove("error");   // reset if already there
