--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <li><a href="daily/monday.html">Monday</a></li>
     <li><a href="daily/tuesday.html">Tuesday</a></li>
     <h1>Page with Potential Project Briefs/Ideas:</h1>
-    <li><a href="briefs.html">Project Briefs</a></li>
+    <li><a href="briefs/briefs.html">Project Briefs</a></li>
     <h1>Week 1 Walkthroughs:</h1>
     <li><a href="walkthroughs/linegraph.html">Line graphs</a></li>
     <li><a href="walkthroughs/scatterplot.html">Scatterplots</a></li>
