--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <h1>Page with Potential Project Briefs/Ideas:</h1>
     <li><a href="briefs/briefs.html">Project Briefs</a></li>
     <h1>Week 1 Walkthroughs:</h1>
-    <li><a href="walkthroughs/linegraph.html">Line graphs</a></li>
-    <li><a href="walkthroughs/scatterplot.html">Scatterplots</a></li>
+    <li><a href="walkthroughs/linegraphs.html">Line graphs</a></li>
+    <li><a href="walkthroughs/scatterplots.html">Scatterplots</a></li>
     <li><a href="walkthroughs/boxplots.html">Boxplots</a></li>
-    <li><a href="walkthroughs/piechart.html">Piecharts</a></li>
-    <li><a href="walkthroughs/barchart.html">Barcharts</a></li>
+    <li><a href="walkthroughs/piecharts.html">Piecharts</a></li>
+    <li><a href="walkthroughs/barcharts.html">Barcharts</a></li>
     <h1>Client "Emails" to Kickstart Projects:</h1>
     <li><a href="briefs/01_task.html">01: Office for Health Improvement and Disparities</a></li>
     <li><a href="briefs/04_task.html">04: Housing</a></li>
