--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <h1>Page with Potential Project Briefs/Ideas:</h1>
     <li><a href="briefs/briefs.html">Project Briefs</a></li>
     <h1>Week 1 Walkthroughs:</h1>
+    <li><a href="walkthroughs/introtask.html">Introduction</a></li>
     <li><a href="walkthroughs/linegraphs.html">Line graphs</a></li>
     <li><a href="walkthroughs/scatterplots.html">Scatterplots</a></li>
     <li><a href="walkthroughs/boxplots.html">Boxplots</a></li>
